Fixed z-index issues & fieldset display

--- a/controlpanel/static/css/control.css
+++ b/controlpanel/static/css/control.css
@@ -31,6 +31,11 @@ legend {
     line-height: revert;
 }
 
+legend > .collapser, legend > b {
+    position: relative;
+    z-index: 100;
+}
+
 legend > .collapser {
     cursor: pointer;
 }
@@ -113,12 +118,13 @@ body:not(.obs-connected) fieldset.obs-required::before,
 body:not(.atem-connected) fieldset.atem-required::before {
     content: "";
     position: absolute;
-    top: 0;
+    top: -0.75rem;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: calc(100% + 0.75rem);
     background-color: rgba(0, 0, 0, 0.25);
-    z-index: 100;
+    z-index: 50;
+    border-radius: 5px;
 }
 
 
